@@ -10,6 +10,7 @@ Version 3.2.0 - SVN
  - Add countdown before contest and timezone to clock.
  - Automatically redirect team to submission list after submit.
  - Add daemon support in C/PHP libraries, use for submit/judgedaemon.
+ - Add category to balloons list and button to view only unsent.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
